# mssm

./: .gitignore  1) GAMMs.ipynb  1) sMs GAMMs.ipynb  2) DC GAMM.ipynb  2) IR GAMMs.ipynb  3) sMs GAMMs.ipynb  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: all-tests.yml  documentation.yml  python-package.yml
data/dcGAMM/no_rand/: series.npy  time_series.npy
data/dcGAMM/rand_int/: covariates.npy  series.npy  trial_ends.npy
docs/: api.rst  conf.py  guide.rst  index.rst  modules.rst  mssm.rst  mssm.src.python.rst  mssm.src.rst  overview.rst  tutorial.ipynb
sim_tests/: sim_p_values.ipynb  sim_selection.ipynb
src/mssm/: __init__.py  models.py  utils.py
src/mssm/src/: cpp_solvers.cpp
src/mssm/src/cpp/: cpp_solvers.cpp  davies.cpp  dchol.cpp  eigen_solvers.cpp  hazard.cpp  mcmc.cpp
src/mssm/src/cpp/hsmm/: decode.cpp  hsmm.cpp  llk.cpp  resid.cpp
src/mssm/src/python/: compact_rep.py  compare.py  constraints.py  custom_types.py  exp_fam.py  file_loading.py  formula.py  gamm_solvers.py  gen_tests.py  hsmm.py  matrix_solvers.py  mcmc.py  penalties.py  repara.py  sem.py  smooths.py  terms.py  utils.py
tests/: defaults.py  test_compare.py  test_fast.py  test_gamm.py  test_gammlss.py  test_gsmm.py  test_hsmm.py  test_segfault.py  test_selection.py
tutorials/: 1) GAMMs.ipynb  2) IR GAMMs.ipynb  3) sMs GAMMs.ipynb
tutorials/data/GAMM/: sim_dat.csv  sim_dat_cond_a.csv  sim_dat_cond_b.csv
tutorials/data/IRGAMM/: sim_dat.csv  trial_ends.npy
tutorials/data/SMSGAMM/: sim_dat.csv  trial_ends.npy
