[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0",
    "GitPython>=3.1.4",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
before-test = "ls"
skip = ["pp*", "cp313-musllinux*", "*-win32", "*i686"]
test-requires = ["pytest", "pytest-cov", "mssmViz==0.1.48", "numdifftools"]
test-command = 'pytest {project}/tests/test_fast.py --cov={project}'

# Build for intel macs as well
[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[project]
dependencies=["numpy >= 1.24.1",
              "pandas >= 1.5.3",
              "scipy >= 1.15.0",
              "tqdm >= 4.66.1"]
name = "mssm"
authors = [
  { name="Joshua Krause", email="jokra001@proton.me" }
]
description = "Toolbox for estimating Generalized Additive Mixed Models (GAMMs), Generalized Additive Mixed Models of Location Scale and Shape (GAMMLSS), and more general smooth models."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
# https://pypi.org/project/setuptools-scm/ - automatic version number based on tag
dynamic = ["version"]

[tool.setuptools_scm]
# https://github.com/pypa/setuptools_scm/issues/342
local_scheme = "no-local-version"